--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ homepage="https://shell.rip/bh.html"
 [dependencies]
 neo4rs="0.5.9"
 futures="0.3.17"
-tokio={version="*"}
+tokio={version="1.13.0"}
 structopt="0.3.25"
 lazy_static = "1.4.0"
 regex = "1.5.4"
